Added a new action productsearchoptional and getproductresultoptional in product controller and added separate datamodel and viewmodel

--- a/DotNetCore/MVC/MyWebApp/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Shared/_Layout.cshtml
@@ -41,6 +41,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductSearch">Product Search</a>
                         </li>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductSearchOptional">Product Search Optional</a>
+                        </li>
 
                         </li>
                         <li class="nav-item">
