--- a/DotNetCore/MVC/MyWebApp/Views/Product/GetProductResultOptional.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/GetProductResultOptional.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MyWebApp.ViewModels.Products.ProductResultOptionalVm>
+﻿@model List<MyWebApp.ViewModels.Products.ProductResultsOptionalVm>
 
 @{
     ViewData["Title"] = "GetProductResultOptional";
@@ -20,7 +20,7 @@
                 <td><b>Price</b></td>
             </tr>
 
-            @foreach (MyWebApp.ViewModels.Products.ProductResultOptionalVm productResultVm in Model)
+            @foreach (MyWebApp.ViewModels.Products.ProductResultsOptionalVm productResultVm in Model)
             {
                 <tr>
                     <td><b>@productResultVm.ProductName</b></td>
