--- a/DotNetCore/MVC/MyWebApp/Views/Customer/Register.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Customer/Register.cshtml
@@ -11,21 +11,24 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Register">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
 
-            <span class="text-danger"><b>@ViewBag.errormessage</b></span>
-            <br /><br />
-
+            @if (ViewBag.ErrorMessage != null)
+            {
+                <span class="text-danger"><b>@ViewBag.ErrorMessage</b></span>
+            }     
+            <br />
+            
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
+                <label asp-for="FirstName" class="control-label">First Name</label>
                 <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
+                @*<span asp-validation-for="FirstName" class="text-danger"></span>*@
             </div>
-           
+            <br />
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
+                <label asp-for="LastName" class="control-label">Last Name</label>
                 <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
+                @*<span asp-validation-for="LastName" class="text-danger"></span>*@
             </div>
             <br/>
             <div class="form-group">
@@ -36,26 +39,27 @@
                 @Html.RadioButtonFor(model => model.Gender, "Female") Female
                 @Html.RadioButtonFor(model => model.Gender, "Transgender") Transgender
                 @Html.RadioButtonFor(model => model.Gender, "Others") Others
-                @Html.ValidationMessageFor(model => model.Gender)
+                @*@Html.ValidationMessageFor(model => model.Gender)*@
             </div>
             <br/>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                @*<span asp-validation-for="Email" class="text-danger"></span>*@
             </div>
-
+            <br />
             <div class="form-group">
-                <label asp-for="DateOfBirth" class="control-label"></label>
+                <label asp-for="DateOfBirth" class="control-label">Date Of Birth</label>
                 <input asp-for="DateOfBirth" class="form-control" />
-                <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                @*<span asp-validation-for="DateOfBirth" class="text-danger"></span>*@
             </div>
-
+            <br/>
             <div class="form-group">
                 <label asp-for="Mobile" class="control-label"></label>
                 <input asp-for="Mobile" class="form-control" />
-                <span asp-validation-for="Mobile" class="text-danger"></span>
+                @*<span asp-validation-for="Mobile" class="text-danger"></span>*@
             </div>
+            <br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
                 
