--- a/DotNetCore/MVC/MyWebApp/Views/Product/Add.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/Add.cshtml
@@ -16,7 +16,10 @@
             <div asp-validation-summary="ModelOnly" class="text-danger">
                 </div>
 
-            <span class="text-danger"><b>@ViewBag.errormessage</b></span>
+            @if (ViewBag.ErrorMessage != null)
+            {
+                <span class="text-danger"><b>@ViewBag.ErrorMessage</b></span>
+            }
             <br /><br />
 
             <div class="form-group">
