I have added validation to the update action in the product controller and used automapper to map the data from viewmodel to the datamodel

--- a/DotNetCore/MVC/MyWebApp/Views/Product/Edit.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyWebApp.ViewModels.Products.ProductVm
+﻿@model MyWebApp.ViewModels.Products.ProductUpdateVm
 
 <h4>Product</h4>
 <hr />
@@ -7,7 +7,10 @@
         <form asp-action="Update">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            @*<span class="text-danger"><b>@ViewBag.errormessage</b></span>*@
+            @if (ViewBag.ErrorMessage != null)
+            {
+                <span class="text-danger"><b>@ViewBag.ErrorMessage</b></span>
+            }
             <br /><br />
 
             <div class="form-group">
@@ -28,15 +31,15 @@
             </div>
             <br />
             <div class="form-group">
-                <label for="Product Size">Product Size </label>
-                @Html.DropDownListFor(model => model.SizeName, ViewBag.ProductSizes as SelectList, "-- Select --", new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.SizeName, "", new { @class = "text-danger" })
+                <label asp-for="SizeId">Product Size </label>
+                @Html.DropDownListFor(model => model.SizeId, ViewBag.ProductSizes as SelectList, "-- Select --", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.SizeId, "", new { @class = "text-danger" })
             </div>
             <br />
             <div class="form-group">
-                <label for="Product Color">Product Color</label>
-                @Html.DropDownListFor(model => model.ColorName, ViewBag.ProductColors as SelectList, "-- Select --", new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ColorName, "", new { @class = "text-danger" })
+                <label asp-for="ColorId">Product Color</label>
+                @Html.DropDownListFor(model => model.ColorId, ViewBag.ProductColors as SelectList, "-- Select --", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ColorId, "", new { @class = "text-danger" })
             </div>
             <br/>
             <div class="form-group">
@@ -46,15 +49,15 @@
             </div>
             <br />
             <div class="form-group">
-                <label asp-for="FabricName" class="control-label">Fabric Name</label>
-                @Html.DropDownListFor(model => model.FabricName, ViewBag.ProductFabrics as SelectList, "-- Select --", new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.FabricName, "", new { @class = "text-danger" })
+                <label asp-for="FabricId" class="control-label">Fabric Name</label>
+                @Html.DropDownListFor(model => model.FabricId, ViewBag.ProductFabrics as SelectList, "-- Select --", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.FabricId, "", new { @class = "text-danger" })
             </div>
             <br />
             <div class="form-group">
-                <label asp-for="CategoryName" class="control-label">Category Name</label>
-                @Html.DropDownListFor(model => model.CategoryName, ViewBag.ProductCategories as SelectList, "-- Select --", new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CategoryName, "", new { @class = "text-danger" })
+                <label asp-for="CategoryId" class="control-label">Category Name</label>
+                @Html.DropDownListFor(model => model.CategoryId, ViewBag.ProductCategories as SelectList, "-- Select --", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
             </div>
             <br />
             <div class="form-group">
