Added password field in customer controller end to end

--- a/DotNetCore/MVC/MyWebApp/Views/Customer/Index.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Customer/Index.cshtml
@@ -153,6 +153,7 @@
                 <td><b>Last Name</b></td>
                 <td><b>Gender</b></td>
                 <td><b>Email</b></td>
+                <td><b>Password</b></td>
                 <td><b>Date Of Birth</b></td>
                 <td><b>Mobile</b></td>
                 <td><b>Actions</b></td>
@@ -165,6 +166,7 @@
                             <td><b>@customer.LastName</b></td>
                             <td><b>@customer.Gender</b></td>
                             <td><b>@customer.Email</b></td>
+                            <td><b>@customer.Password</b></td>
                             <td><b>@customer.DateOfBirth</b></td>
                             <td><b>@customer.Mobile</b></td>
                             <td> @Html.ActionLink("Please Edit", "Edit", new { id = customer.Id }) |
