--- a/DotNetCore/MVC/MyWebApp/Views/Customer/Edit.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Customer/Edit.cshtml
@@ -38,25 +38,28 @@
 
             <label style="visibility:hidden;" for="id">Id:</label><br>
             <input style="visibility:hidden;" type="text" id="id" name="id" value="@Model.Id"><br>
-
+            <br/>
             <label for="FirstName">First Name:</label><br>
             <input type="text" id="FirstName" name="FirstName" value="@Model.FirstName"><br>
-
+            <br/>
             <label for="LastName">Last Name:</label><br>
             <input type="text" id="lastName" name="LastName" value="@Model.LastName"><br>
-
+            <br/>
             <label for="gender">Gender:</label><br>
             <input type="text" id="gender" name="gender" value="@Model.Gender"><br>
-
+            <br/>
             <label for="Email">Email:</label><br>
             <input type="text" id="Email" name="Email" value="@Model.Email"><br>
-
+            <br/>
+            <label for="Password">Password:</label><br>
+            <input type="text" id="Password" name="Password" value="@Model.Password"><br>
+            <br/>
             <label for="DateOfBirth">Date Of Birth:</label><br>
             <input type="text" id="DateOfBirth" name="DateOfBirth" value="@Model.DateOfBirth"><br>
-
+            <br/>
             <label for="Mobile">Mobile:</label><br>
             <input type="text" id="Mobile" name="Mobile" value="@Model.Mobile"><br><br>
-
+            <br/>
             <input type="submit" value="Update" class="btn btn-primary" />
             <br />
             <input type="submit" value="Cancel" class="btn btn-primary" />
