--- a/DotNetCore/MVC/MyWebApp/Views/Customer/View.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Customer/View.cshtml
@@ -51,6 +51,10 @@
                 <td><a href="http://localhost:5277/Customer/Index">@Model.Email</a></td>
             </tr>
             <tr>
+                <td><b>Password:</b></td>
+                <td>@Model.Password</td>
+            </tr>
+            <tr>
                 <td><b>DateOfBirth:</b></td>
                 <td>@Model.DateOfBirth</td>
             </tr>
