--- a/DotNetCore/MVC/MyWebApp/Views/Customer/Register.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Customer/Register.cshtml
@@ -45,7 +45,7 @@
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
-                @*<span asp-validation-for="Email" class="text-danger"></span>*@
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
