Added new controller account where worked on customer login related

--- a/DotNetCore/MVC/MyWebApp/Views/Customer/View.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Customer/View.cshtml
@@ -48,11 +48,7 @@
             </tr>
             <tr>
                 <td><b>Email:</b></td>
-                <td><a href="http://localhost:5277/Customer/Index">@Model.Email</a></td>
-            </tr>
-            <tr>
-                <td><b>Password:</b></td>
-                <td>@Model.Password</td>
+                <td>@Model.Email</td>
             </tr>
             <tr>
                 <td><b>DateOfBirth:</b></td>
