--- a/DotNetCore/MVC/MyWebApp/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Shared/_Layout.cshtml
@@ -26,6 +26,10 @@
                         </li>
 
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login"><b>Login</b></a>
+                        </li>
+
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="CustomerSearch">Customer Search</a>
                         </li>
 
