Removed all block of code related to login method into account repository and implement in customer repository

--- a/DotNetCore/MVC/MyWebApp/Views/Account/View.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Account/View.cshtml
@@ -58,16 +58,10 @@
                 <td><b>Mobile:</b></td>
                 <td>@Model.Mobile</td>
             </tr>
-            <tr>
-                <td></td>
-            </tr>
+            <br/>
         </table>
-        <a href="http://localhost:5277/Customer/Index"> Back Home </a>
+        <a href="http://localhost:5277/Customer/Index"> <b>Back Home</b> </a>
     </form>
 </body>
 
 </html>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
