--- a/DotNetCore/MVC/MyWebApp/Views/Account/Login.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Account/Login.cshtml
@@ -8,13 +8,13 @@
             <span class="text-danger"><b>@ViewBag.ErrorMessage</b></span>
             <br/>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
+                <label asp-for="Email" class="control-label"><b>Email</b></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
+                <label asp-for="Password" class="control-label"><b>Password</b></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
@@ -22,7 +22,7 @@
             <div class="form-group">
                 <input type="submit" value="Login" class="btn btn-primary" />
 
-                <a href="http://localhost:5277/Customer/Index"> Cancel </a>
+                <a href="http://localhost:5277/Customer/Index"> <b>Cancel</b> </a>
             </div>
         </form>
     </div>
