--- a/DotNetCore/MVC/MyWebApp/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                     <ul class="navbar-nav flex-grow-1">
                         
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">Customer</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index"><b>Customer</b></a>
                         </li>
 
                         <li class="nav-item">
@@ -30,34 +30,34 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="CustomerSearch">Customer Search</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="CustomerSearch"><b>Customer Search</b></a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="CustomerSearchOptional">Customer Search Optional</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="CustomerSearchOptional"><b>Customer Search Optional</b></a>
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index"><b>Product</b></a>
                         </li>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductSearch">Product Search</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductSearch"><b>Product Search</b></a>
                         </li>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductSearchOptional">Product Search Optional</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductSearchOptional"><b>Product Search Optional</b></a>
                         </li>
 
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Employee</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index"><b>Employee</b></a>
                         </li>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="Index">Movie</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="Index"><b>Movie</b></a>
                         </li>
                     </ul>
                 </div>
