--- a/DotNetCore/MVC/MyWebApp/Views/Product/ProductSearch.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/ProductSearch.cshtml
@@ -10,7 +10,7 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"> </div>
                 <div class="form-group">
                     <label class="control-label">Product Name</label>
-                    <input type="Text" id="ProductName" name="ProductName" value="jacket" class="form-control" new { required="required" } />
+                    <input type="Text" id="ProductName" name="ProductName" class="form-control" new { required="required" } />
                     <span asp-validation-for="ProductName" class="text-danger"></span>
                 </div>
                 </br>
