Added a quantity text box in product view and add submit button buy now and in data base created a new orders table

--- a/DotNetCore/MVC/MyWebApp/Views/Product/View.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/View.cshtml
@@ -70,11 +70,25 @@
                 <td><b>Price:</b></td>
                 <td>@Model.Price</td>
             </tr>
+            <td>
+                <b>Enter Quantity:</b>
+            </td>
+            <td>
+                <input type="text" id="Quantity" name="Quantity"
+            </td>
             <tr>
-                <td></td>
+                <td>
+
+                </td>
+                <td>
+                    <div class="form-group" >
+                        <input type="submit" value="Buy Now" class="btn btn-primary" />
+                    </div>
+                </td>
             </tr>
         </table>
-        <a href="http://localhost:5277/Product/Index"> Back Home </a>
+        <br/>
+        <a href="http://localhost:5277/Product/Index"> <b>Back Home</b> </a>
     </form>
 </body>
 
