I changed the action name and view model name, as well as the method name and data model name in the repository

--- a/DotNetCore/MVC/MyWebApp/Views/Product/View.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/View.cshtml
@@ -27,7 +27,7 @@
 </style>
 
 <body>
-    <form asp-action="BuyNow">
+    <form asp-action="OrderPlace">
 
         <h2 class="heading">
             Product View
@@ -36,8 +36,7 @@
         <table class="table">
             <tr>
                 <td>
-                    @Model.ProductId
-                    <input type="hidden" name="ProductId" value="@Model.ProductId" id="ProductId" />
+                    <input type="hidden" name="ProductId" value="@Model.Id" id="ProductId" />
                 </td>
             </tr>
             <tr>
