I have added a new order controller with an order place action I call this action using the <form asp-controller> tag in the product view

--- a/DotNetCore/MVC/MyWebApp/Views/Product/View.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/View.cshtml
@@ -27,7 +27,7 @@
 </style>
 
 <body>
-    <form asp-action="OrderPlace">
+    <form asp-controller="Order" asp-action="OrderPlace">
 
         <h2 class="heading">
             Product View
