I added a session in the account controller and used it in various places from one controller to another and even in views

--- a/DotNetCore/MVC/MyWebApp/Views/Product/View.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Product/View.cshtml
@@ -27,12 +27,12 @@
 </style>
 
 <body>
-    <form asp-controller="Order" asp-action="OrderPlace">
+    <form asp-controller="Order" asp-action="PlaceOrder">
 
         <h2 class="heading">
             Product View
         </h2>
-
+    
         <table class="table">
             <tr>
                 <td>
