--- a/DotNetCore/MVC/MyWebApp/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Shared/_Layout.cshtml
@@ -40,27 +40,33 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index"><b>Product</b></a>
                         </li>
-                        </li>
+                       
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductSearch"><b>Product Search</b></a>
                         </li>
-                        </li>
+                       
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductSearchOptional"><b>Product Search Optional</b></a>
                         </li>
 
-                        </li>
-                        <li class="nav-item">
+                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index"><b>Employee</b></a>
                         </li>
-                        </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="Index"><b>Movie</b></a>
                         </li>
+                        
                     </ul>
                 </div>
+
+                <div class="topnav-right">
+                    <b>Welcome @ViewBag.LoggedInCustomerFirstName @ViewBag.LoggedInCustomerLastName</b>
+                </div>
+                <div>&nbsp;&nbsp;</div>
+                
             </div>
         </nav>
     </header>
