Added a new method update on login failed in account controller

--- a/DotNetCore/MVC/MyWebApp/Views/Account/Login.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Account/Login.cshtml
@@ -7,8 +7,8 @@
 
             <span class="text-danger"><b>@ViewBag.ErrorMessage</b></span>
 
-            <span class="text-danger"><b>@ViewBag.SuccessMessage</b></span>
-            <br/>
+            <span class="text-danger"><b>@ViewBag.LoginSuccessMessage</b></span>
+            <br/>   
             <div class="form-group">
                 <label asp-for="Email" class="control-label"><b>Email</b></label>
                 <input asp-for="Email" class="form-control" />
