Added a new method updateislocked in customer repository

--- a/DotNetCore/MVC/MyWebApp/Views/Account/Login.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Account/Login.cshtml
@@ -8,6 +8,8 @@
             <span class="text-danger"><b>@ViewBag.ErrorMessage</b></span>
 
             <span class="text-danger"><b>@ViewBag.LoginSuccessMessage</b></span>
+
+            <span class="text-danger"><b>@ViewBag.LockedErrorMessage</b></span>
             <br/>   
             <div class="form-group">
                 <label asp-for="Email" class="control-label"><b>Email</b></label>
