--- a/DotNetCore/MVC/MyWebApp/Views/Employee/Index.cshtml
+++ b/DotNetCore/MVC/MyWebApp/Views/Employee/Index.cshtml
@@ -10,6 +10,8 @@
 </head>
 </br>
 <span class="text-success"> <b> @ViewBag.SuccessMessageForAdd </b> </span>
+
+<span> <b>EmployeeCount:</b> <b> @ViewBag.EmployeeCount </b> </span>
 <br />
 <div>
     <a href="http://localhost:5277/Employee/Add"> <b>Add</b> </a>
