Added a new method getimagebyid in repository and called in view action on upload controller

--- a/DotNetCore/MVC/ImageUpload/Views/Upload/Index.cshtml
+++ b/DotNetCore/MVC/ImageUpload/Views/Upload/Index.cshtml
@@ -19,7 +19,7 @@
                 <br />
                 <div class="form-group">
                     <label for="ImageName">Image</label>
-                    <input class="form-control" type="file" id="ImageName" name="ImageName" required>
+                    <input class="form-control" type="file" id="ImageFile" name="ImageFile" required>
                 </div>
                 <br />
                 <input type="submit" value="Upload" class="btn btn-primary" />
