--- a/DotNetCore/MVC/ShopEase/Views/Product/Add.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Product/Add.cshtml
@@ -8,7 +8,7 @@
         <form asp-action="Add">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            <span class="text-success-msg"><b>@ViewBag.SuccessMessage</b></span>
+            <span class="text-danger"><b>@ViewBag.ErrorMessage</b></span>
 
             <div class="form-group">
                 <label asp-for="ProductName" class="control-label"><b>Product Name</b></label>
@@ -52,12 +52,3 @@
         </form>
     </div>
 </div>
-
-@* <div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
- *@
