--- a/DotNetCore/MVC/ShopEase/Views/Product/Index.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Product/Index.cshtml
@@ -13,17 +13,18 @@
     <b><b><a href="https://localhost:7150/Product/Add"> Add </a></b></b>
 </div
 <br />
-
+<b><label>Total Product:</label>  @ViewBag.productsCount</b>
+<br />
 <body>
     <form>
         <table border="3px" class="table">
             <tr class="table1">
-                <td><b>Product Name</b></td>
-                <td><b>Brand Name</b></td>
-                <td><b>Price</b></td>
-                <td><b>Discount</b></td>
-                <td><b>Category Name</b></td>
-                <td><b>Supplier Name</b></td>
+                <td><b><a asp-action="Index" asp-route-sortColumnName="ProductName" asp-route-sortOrder="ASC">Product Name</a></b></td>
+                <td><b><a asp-action="Index" asp-route-sortColumnName="BrandName" asp-route-sortOrder="ASC">Brand Name</a></b></td>
+                <td><b><a asp-action="Index" asp-route-sortColumnName="Price" asp-route-sortOrder="ASC">Price</a></b></td>
+                <td><b><a asp-action="Index" asp-route-sortColumnName="Discount" asp-route-sortOrder="ASC">Discount</a></b></td>
+                <td><b><a asp-action="Index" asp-route-sortColumnName="CategoryName" asp-route-sortOrder="ASC">Category Name</a></b></td>
+                <td><b><a asp-action="Index" asp-route-sortColumnName="SupplierName" asp-route-sortOrder="ASC">Supplier Name</a></b></td>
             </tr>
 
             @foreach (ShopEase.ViewModels.Product.ProductVm productVm in Model)
