--- a/DotNetCore/MVC/ShopEase/Views/Product/Index.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Product/Index.cshtml
@@ -19,7 +19,10 @@
     <form>
         <table border="3px" class="table">
             <tr class="table1">
-                <td><b><a asp-action="Index" asp-route-sortColumnName="ProductName" asp-route-sortOrder="ASC">Product Name</a></b></td>
+                @* <td><b><a asp-action="Index" asp-route-sortColumnName="ProductName" asp-route-sortOrder="ASC">Product Name</a></b></td> *@
+                <td><b><a asp-action="Index" asp-route-sortColumnName="ProductName" asp-route-sortOrder="@ViewBag.SortOrder">
+                    Product Name
+                </a></b></td>
                 <td><b><a asp-action="Index" asp-route-sortColumnName="BrandName" asp-route-sortOrder="ASC">Brand Name</a></b></td>
                 <td><b><a asp-action="Index" asp-route-sortColumnName="Price" asp-route-sortOrder="ASC">Price</a></b></td>
                 <td><b><a asp-action="Index" asp-route-sortColumnName="Discount" asp-route-sortOrder="ASC">Discount</a></b></td>
