--- a/DotNetCore/MVC/ShopEase/Views/Customer/Register.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Customer/Register.cshtml
@@ -3,33 +3,35 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Add">
+        <form asp-action="Register">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <span class="text-danger"><b>@ViewBag.ErrorMessage</b></span>
+            <br />
             <div class="form-group">
-                <label asp-for="FullName" class="control-label"></label>
+                <label asp-for="FullName" class="control-label"><b>Full Name</b></label>
                 <input asp-for="FullName" class="form-control" />
                 <span asp-validation-for="FullName" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <label asp-for="Mobile" class="control-label"></label>
+                <label asp-for="Mobile" class="control-label"><b>Mobile</b></label>
                 <input asp-for="Mobile" class="form-control" />
                 <span asp-validation-for="Mobile" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <label asp-for="Gender" class="control-label"></label>
+                <label asp-for="Gender" class="control-label"><b>Gender</b></label>
                 <input asp-for="Gender" class="form-control" />
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
+                <label asp-for="Email" class="control-label"><b>Email</b></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
+            <br />
             <div class="form-group">
                 <input type="submit" value="Add" class="btn btn-primary" />
             </div>
