--- a/DotNetCore/MVC/ShopEase/Views/Shared/_Layout.cshtml
+++ b/DotNetCore/MVC/ShopEase/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index"><b>Customer</b></a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login"><b>Login</b></a>
+                        </li>
                     </ul>
                 </div>
             </div>
